tests/ui/rfcs/rfc-2361-dbg-macro/dbg-macro-move-semantics.stderr
error[E0382]: use of moved value: `a`
  --> $DIR/dbg-macro-move-semantics.rs:9:18
   |
LL |     let a = NoCopy(0);
   |         - move occurs because `a` has type `NoCopy`, which does not implement the `Copy` trait
LL |     let _ = dbg!(a);
LL |     let _ = dbg!(a);
   |                  ^ value used here after move
  --> $SRC_DIR/std/src/macros.rs:LL:COL
   |
   = note: value moved here
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
